Actualizaciones a los videos y las guias de las tres primeras semanas del curso.

--- a/Nivel2-B/Documentos/Guia/guia.tex
+++ b/Nivel2-B/Documentos/Guia/guia.tex
@@ -1,7 +1,7 @@
-\documentclass[a4paper,12pt]{book}
+\documentclass[a4paper,12pt]{report}
 \input{preamble.tex}
 \usepackage{float}
-\includeonly{guia2}
+\includeonly{guia3}
 \graphicspath{{./figs/}}
 % Renombro lo capitulos
 \addto\captionsspanish{\renewcommand{\chaptername}{Clase}}
@@ -22,7 +22,7 @@
 \maketitle
 %\titlepage
 %\tableofcontents
-%\include{prefacio}
+\include{prefacio}
 
 %\mainmatter
 \include{guia1}
