--- a/Nivel2-B/Documentos/Guia/guia2.tex
+++ b/Nivel2-B/Documentos/Guia/guia2.tex
@@ -1,14 +1,12 @@
 \chapter{Interacciones con el blanco}
 
-Esta clase tiene como objetivo familiarizarse con la interpretación visual de imágenes SAR. Para ello se estudiaran las interacciones de los distintos blancos para las bandas X, C y L.
+Esta clase tiene como objetivo familiarizarse con la interpretación visual de imágenes SAR. Para ello se estudiarán las interacciones con los distintos blancos para las bandas X, C y L.
 
 \section{Interpretación visual}
 
 En las microondas se suele hablar de tres grupos de interacciones: doble rebote, en volumen y especular, las cuales dependerán del blanco y la banda del satélite (Figura \ref{fig:interacciones}).
 
 \subsection{Banda-X}
-
-La región del espectro electromagnético de la \emph{Banda X} es la de menor longitud de onda dentro de las imágenes radar. Las imágenes adquiridas utilizando esta región tienen menos penetración en la vegetación y mayor backscatter en suelos sin cobertura (Figura \ref{fig:interacciones}).
 
 Abra la imagen
 \begin{center}
@@ -22,8 +20,8 @@ Identifique en ella
     \item La pista de aterrizaje de la ciudad de Ushuaia.
     \item Zonas urbanas en la ciudad de Ushuaia.
     \item Zonas con vegetación sobre la ladera de la montaña.
-    \item El agua que está en el lago con coordenadas $54^\circ 48^\prime 51^{\prime\prime}$ latitud sur y $68^\circ 18^\prime 58^{\prime\prime}$ longitud oeste.
-    \item El agua del canal de Beagle.
+    \item La bahía encerrada con coordenadas $54^\circ 48^\prime 51^{\prime\prime}$ latitud sur y $68^\circ 18^\prime 58^{\prime\prime}$ longitud oeste.
+    \item El canal de Beagle.
 \end{enumerate}
 
 Puede ayudarse utilizando la imagen óptica.
@@ -38,8 +36,6 @@ Puede ayudarse utilizando la imagen óptica.
 
 \subsection{Banda C}
 
-La región del espectro electromagnético de la \emph{Banda C} tiene longitudes de onda intermedias. Las imágenes adquiridas utilizando esta región tendrán menos reflectancia en los suelos sin cobertura, dando información sobre el scattering en volumnes (Figura \ref{fig:interacciones}).
-
 Abra la imagen
 \begin{center}
   \directory{raster\_data/S1B\_IW\_SLC\_\_1SDV\_20171012.dim}
@@ -53,15 +49,13 @@ Identifique en ella
     \item La pista de aterrizaje de la ciudad de Ushuaia.
     \item Zonas urbanas en la ciudad de Ushuaia.
     \item Zonas con vegetación sobre la ladera de la montaña.
-    \item El agua que está en el lago con coordenadas $54^\circ 48^\prime 51^{\prime\prime}$ latitud sur y $68^\circ 18^\prime 58^{\prime\prime}$ longitud oeste.
-    \item El agua del canal de Beagle.
+    \item La bahía encerrada con coordenadas $54^\circ 48^\prime 51^{\prime\prime}$ latitud sur y $68^\circ 18^\prime 58^{\prime\prime}$ longitud oeste.
+    \item El canal de Beagle.
 \end{enumerate}
 
 Puede ayudarse utilizando la imagen óptica.
 
 \subsection{Banda L}
-
-La región del espectro electromagnético de la \emph{Banda L} es la de mayor longitud de onda dentro de las imágenes radar. En general, mantendrá interacciones especulares con los suelos sin cobertura, pudiendo penetrar en funcion del grado de humedad. Además, permitirá identificar propiedades de las coberturas vegetadas por debajo del canopeo (Figura \ref{fig:interacciones}).
 
 Abra la imagen
 \begin{center}
@@ -75,8 +69,8 @@ Identifique en ella
     \item La pista de aterrizaje de la ciudad de Ushuaia.
     \item Zonas urbanas en la ciudad de Ushuaia.
     \item Zonas con vegetación sobre la ladera de la montaña.
-    \item El agua que está en el lago con coordenadas $54^\circ 48^\prime 51^{\prime\prime}$ latitud sur y $68^\circ 18^\prime 58^{\prime\prime}$ longitud oeste.
-    \item El agua del canal de Beagle.
+    \item La bahía encerrada con coordenadas $54^\circ 48^\prime 51^{\prime\prime}$ latitud sur y $68^\circ 18^\prime 58^{\prime\prime}$ longitud oeste.
+    \item El canal de Beagle.
 \end{enumerate}
 
 Puede ayudarse utilizando la imagen óptica.
@@ -93,7 +87,7 @@ Utilice la imagen óptica para identificar en la imagen \emph{Sentinel-1b}:
      \item El valor de dB de la pista de aterrizaje.
      \item El valor de dB de las zonas urbanas.
      \item El valor de dB de las zonas con vegetación.
-     \item El valor de dB para el agua del lago.
+     \item El valor de dB para el agua de la bahía encerrada.
      \item El valor de dB para el agua del canal.
  \end{enumerate}
 
@@ -101,7 +95,7 @@ Se puede calcular el valor promedio de dB seleccionando una región especifica e
 
 Repita este análisis para las imágenes en banda X y L.
 
-\section{Preguntas disparadoras}
+\section{Preguntas para debate}
 
 Comparando las tres imágenes SAR utilizadas responda:
 
@@ -114,11 +108,11 @@ Comparando las tres imágenes SAR utilizadas responda:
 \end{que}
 
 \begin{que}
-  ¿Que sucede sobre el bosque al observar las imágenes en banda X, C y L.
+  ¿Que sucede sobre con la vegetación sobre la ladera de la montaña al observar las imágenes en banda X, C y L?
 \end{que}
 
 \begin{que}
   ¿A que tipo de interacción corresponde cada uno de los blancos estudiados durante esta clase? ¿Depende de la imagen utilizada?
 \end{que}
 
-Estas preguntas no serán evaluadas. Su objetivo es servir de disparador en el foros de discusión.
+Estas preguntas no serán evaluadas. Su objetivo es discutirlas en el foro de sonsultas e intercambio de la clase.
