--- a/Nivel2-B/Documentos/Guia/prefacio.tex
+++ b/Nivel2-B/Documentos/Guia/prefacio.tex
@@ -21,12 +21,28 @@ Al finalizar el curso, el alumno podrá:
 \begin{enumerate} \itemsep-0.4em
   \item Interpretar imágenes SAR en las bandas X, L y C.
   \item Obtener y procesar imágenes SAR de distintas fuentes.
-  \item Comprender que clase de errores pueden aparecer en el procesamiento de imágenes SAR.
   \item Interpretar imágenes SAR full polarimétricas en la descomposición de Pauli.
   \item Conocer distinas áreas de aplicación de las imágenes SAR.
 \end{enumerate}
 
 \section*{Programa}
+
+\subsection*{Clase 1: introducción al radar}
+Espectro electromagnético. Operación de un radar. Formación de imágenes SAR. Geometría de adquisición. Modos de adquisición. Comparación con imágenes ópticas.
+
+\subsection*{Clase 2: interacciones con el blanco}
+Interpretación visual de imágenes SAR. Textura y geometría de coberturas típicas. Coeficiente de retrodispersión. Bandas L, C y X. Formás de interacción con el blanco: doble rebote, en volumen y especular. Resolución espacial.
+
+\subsection*{Clase 3: Procesamiento y speckle}
+Calibración de imágenes SAR. Ruido speckle y multilooking. Distorciones geométricas. Proyección en rango y en el terreno. Niveles de procesamiento de imágenes SAR.
+
+\subsection*{Clase 4: polarimetría}
+Ondas electromagnéticas y polarización. Imágenes full polarimetricas. Matriz de scatter y backscatter. Descomposiciónes polarimétricas. Descomposición de Pauli.
+
+\subsection*{Clase 5: misión SAOCOM y aplicaciones}
+Misiones SAR. Datos históricos y actuales. Aplicaciones de los datos SAR. Plan espacial nacional. Misión SAOCOM.
+
+\section*{Cronograma}
 % Fecha de inicio del curso
 \SetDate[03/04/2018]
 \begin{longtable}[h!]{ c  c  }
@@ -35,7 +51,7 @@ Al finalizar el curso, el alumno podrá:
 \toprule
 \textbf{Día} & \textbf{Contenido} \\
 \midrule
-\mydate\today & \begin{minipage}{.65\textwidth}
+\mydate\today & \begin{minipage}{.80\textwidth}
 \begin{itemize}
     \vspace{1mm}
 	\item Actividad: Encuesta de inicio del curso. Descara de materiales y software.
@@ -43,73 +59,74 @@ Al finalizar el curso, el alumno podrá:
 \end{itemize}
 \end{minipage} \\
 \midrule
-\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.80\textwidth}
 \begin{itemize}
     \vspace{1mm}
-  \item Teoría: Espectro electromagnético. Operación de un radar. Formación de imágenes SAR. Geometría de adquisición. Modos de adquisición. Comparación con imágenes ópticas.
+  \item Video teórico: introducción al radar.
   \item Práctica: Familiarización con la interface gráfica del SNAP.
-	\item Actividad: Cuestionario 1 de la plataforma de eduación a distancia.
+	\item Cuestionario: introducción al radar
     \vspace{1mm}
 \end{itemize}
 \end{minipage} \\
 \midrule
-\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.80\textwidth}
 \begin{itemize}
     \vspace{1mm}
-	\item Teoría: Interpretación visual de imágenes SAR. Textura y geometría de coberturas típicas. Coeficiente de retrodispersión. Bandas L, C y X. Formás de interacción con el blanco: doble rebote, en volumen y especular. Resolución espacial.
+	\item Video teórico: interacciones con el blanco
   \item Práctica: Interpretación visual de imágenes SAR en bandas L, C y X. Obtención de coeficientes de retrodispersión.
-	\item Actividad: Cuestionario 2 de la plataforma de eduación a distancia.
+	\item Cuestionario: interacciones con el blanco.
     \vspace{1mm}
 \end{itemize}
 \end{minipage} \\
 
 \midrule
-\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.80\textwidth}
 \begin{itemize}
     \vspace{1mm}
-	\item Teoría: Calibración de imágenes SAR. Ruido speckle y multilooking. Distorciones geométricas. Proyección en rango y en el terreno. Niveles de procesamiento de imágenes SAR.
+	\item Video teórico: procesamiento y speckle.
   \item Práctica: Descarga y procesamiento de imágenes SAR del catálogo del Alaska Satellite Facility.
-	\item Actividad: Cuestionario 3 de la plataforma de eduación a distancia.
+	\item Cuestionaario: procesamiento y speckle
     \vspace{1mm}
 \end{itemize}
 \end{minipage} \\
 
 
 \midrule
-\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.80\textwidth}
 \begin{itemize}
     \vspace{1mm}
-	\item Teoría: Ondas electromagnéticas y polarización. Imágenes full polarimetricas. Matriz de scatter y backscatter. Descomposiciónes polarimétricas. Descomposición de Pauli.
+	\item Video teórico: polarimetría.
   \item Práctica: Cálculo e interpretación de la descomposición de Pauli.
-	\item Actividad: Cuestionario 4 de la plataforma de eduación a distancia.
+	\item Cuestionario: polarimetría.
     \vspace{1mm}
 \end{itemize}
 \end{minipage} \\
 
 \midrule
-\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.80\textwidth}
 \begin{itemize}
     \vspace{1mm}
-	\item Teoría: Misiones SAR. Datos históricos y actuales. Aplicaciones de los datos SAR. Plan espacial nacional. Misión SAOCOM.
+	\item Video teórico: misión SAOCOM y aplicaciones.
 	\item Práctica: Uso de imágenes SAR en distintas aplicaciones.
-	\item Actividad: Cuestionario 5 de la plataforma de eduación a distancia.
+	\item Cuestionario: misión SAOCOM y aplicaciones.
     \vspace{1mm}
 \end{itemize}
 \end{minipage} \\
 
 \midrule
-\AdvanceDate[7] \mydate\today & \begin{minipage}{.65\textwidth}
+\AdvanceDate[7] \mydate\today & \begin{minipage}{.80\textwidth}
 \begin{itemize}
     \vspace{1mm}
-	\item Actividad: Encuesta de satisfacción del curso. Descarga de certificados de aprobación
+	\item Encuesta de satisfacción del curso.
+  \item Descarga de certificados de aprobación
     \vspace{1mm}
 \end{itemize}
 \end{minipage} \\
 \midrule
-\AdvanceDate[14] \mydate\today & \begin{minipage}{.65\textwidth}
+\AdvanceDate[16] \mydate\today & \begin{minipage}{.80\textwidth}
 \begin{itemize}
     \vspace{1mm}
-	\item Actividad: Fin del curso. Última fecha para completar las actividades y descargar el certificado de aprobación.
+	\item Fin del curso. Última fecha para completar las actividades y descargar el certificado de aprobación.
     \vspace{1mm}
 \end{itemize}
 \end{minipage} \\
