--- a/Nivel2-B/Documentos/Videos/clase5.tex
+++ b/Nivel2-B/Documentos/Videos/clase5.tex
@@ -69,3 +69,99 @@
 %--- Next Frame ---%
 
 \subsection{Aplicaciones SAR}
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{fig:polarizacion.png}
+    \caption{Cálculo de la humedad del suelo.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{fig:polarizacion.png}
+    \caption{Cálculo de la rugosidad del suelo.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{fig:polarizacion.png}
+    \caption{Detección de cuerpos de água.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{fig:polarizacion.png}
+    \caption{Clasificación de cultivos.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{fig:polarizacion.png}
+    \caption{Detección de cambios en ámbitos urbanos.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{fig:polarizacion.png}
+    \caption{Deformación de la superficie por erupciones volcánicas.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{fig:polarizacion.png}
+    \caption{Detección de subsidencia por métodos interferométricos.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{fig:polarizacion.png}
+    \caption{Detección de subsidencia por métodos interferométricos.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.5\textwidth]{fig:rgbpauli}
+    \caption{Descomposición de Pauli en combinación RGB.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+Muchas gracias.
+\end{frame}
+%--- Next Frame ---%
