--- a/Nivel2-B/Documentos/Videos/presentacion.tex
+++ b/Nivel2-B/Documentos/Videos/presentacion.tex
@@ -6,9 +6,9 @@
 \input{preamble.tex}
 \usepackage{multimedia}
 \usepackage{subfig}
-\includeonly{clase5}
+\includeonly{clase4}
 \title{Introducción a la teledetección SAR}
-\subtitle{Nivel 2}
+\subtitle{Curso Nivel 2:}
 
 \author{Francisco Nemiña$^{*}$ \and Tomás Zajc$^{**}$}
 
