--- a/Nivel2-B/Documentos/Videos/clase3.tex
+++ b/Nivel2-B/Documentos/Videos/clase3.tex
@@ -1,55 +1,40 @@
 \section{Speckle y procesamiento}
 
-\subsection{Ecuación de radar}
-\begin{frame}{\secname : \subsecname}
-    \begin{block}{Definición}
-      \begin{equation}
-        P_r = \frac{P_t G_t G_r \lambda^2 \sigma}{(4\pi)^3 R^4}
-      \end{equation}
-      Con $P_r$ y $P_t$ las las potencias recibidas y transmitidas, $G_r$ y $G_t$ las ganancias del emisor y receptor, $\lambda$ la longitud de onda, $\sigma$ el coeficiente de backscatter y $R$ la distancia entre el emisor y el blanco.
-    \end{block}
-\end{frame}
-%--- Next Frame ---%
-
-\begin{frame}{\secname : \subsecname}
-    \begin{block}{Definición}
-      Es común expresar la potencia de un radar en decibels cómo
-      \begin{equation}
-        P [dB] = 10\log_{10}(P_r)
-      \end{equation}
-      donde $P_r$ es una potencia reflejada.
-    \end{block}
-\end{frame}
-%--- Next Frame ---%
-
 \subsection{Speckle}
+
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
-    \movie[width = 0.95\textwidth,loop,autostart]{\centering\includegraphics[width=0.95\textwidth]{fig:speckle.png}}{./figs/fig:speckle.mp4}
-    \caption{ }
+    \includegraphics[width=0.65\textwidth]{fig:fase.png}
+    \caption{Medición de fase y amplitud para un solo blanco.}
     \label{}
   \end{figure}
 \end{frame}
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
-  \begin{itemize}
-    \item El radar suma su señal de manera compleja, modulo y fase.
-    \item Como todos los blancos no están en fase la suma no es siempre constructiva.
-    \item El specke no es ruido en el sentido que es determinístico. Si repito la adquisición manteniendo la geometría el patrón de specke resulta idéntico.
-    \item Si promedio dos pixeles continuos va a volver a pasar lo mismo. Salvo que lo haga en potencia (multilooking)
-  \end{itemize}
+  \begin{figure}
+    \centering
+    \movie[width = 0.95\textwidth,loop,autostart]{\centering\includegraphics[width=0.95\textwidth]{fig:speckle.png}}{./figs/fig:speckle.mp4}
+    \caption{Medición de fase y amplitud con varios blancos dentro del píxel.}
+    \label{}
+  \end{figure}
 \end{frame}
 %--- Next Frame ---%
 
+
 \begin{frame}{\secname : \subsecname}
+  \begin{itemize}
+    \item El specke no es ruido, es determinístico. Si repito la adquisición manteniendo la geometría el patrón de specke resulta idéntico.
+    \item Si promedio dos pixeles en amplitud tendré el mismo problema. Tengo que promediarlos en potencia (multilooking)
+  \end{itemize}
       \begin{figure}
         \centering
-        \includegraphics[width=0.9\textwidth]{fig:multilook.png}
-        \caption{Proceso de multilook.}
+        \includegraphics[width=0.65\textwidth]{fig:multilook.png}
+        %\caption{Proceso de multilook.}
         \label{}
       \end{figure}
+
 \end{frame}
 %--- Next Frame ---%
 
@@ -91,11 +76,22 @@
 
 
 \subsection{Distorciones geométricas}
+
+\begin{frame}{\secname : \subsecname}
+      \begin{figure}
+        \centering
+        \includegraphics[width=0.8\textwidth]{fig:slant.png}
+        \caption{Comparación entre Slant range y Ground range.}
+        \label{}
+      \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
 \begin{frame}{\secname : \subsecname}
       \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{fig:dist.png}
-        \caption{Distorciones geométricas típicas en una imagen radar: a. foreshortening, b. layover, c. shadowing.}
+        \caption{Distorciones geométricas típicas en una imagen radar:\\ {\centering a. foreshortening, b. layover, c. shadowing.}}
         \label{}
       \end{figure}
 \end{frame}
@@ -113,7 +109,7 @@
 
 \begin{frame}{\secname : \subsecname}
   \begin{block}{Correcciones geométricas}
-    Para resolver parte de las distorciones geométricas es util para la imagen del \emph{slant range} al \emph{ground range}. Para esto deberemos proyectarla y podemos hacerlo de dos maneras
+    Para resolver parte de las distorciones geométricas es util pasar la imagen del \emph{slant range} al \emph{ground range}. Para esto deberemos proyectarla y podemos hacerlo de dos maneras
     \begin{itemize}
       \item Sobre el elipsoide.
       \item Sobre un modélo de elevación digital.
@@ -134,10 +130,17 @@
   \toprule
   L1A (SLC)                                                                                                    & L1B (GRD)                                                                  & L1C (GEC)                                                                              & L1D (GTC)                                                                                     \\ \midrule
   Single Look Complex                                                                                          & Ground Range Detected                                                      & Geocoded Elipsoid Corrected                                                            & Geocoded Terrain Corrected                                                                    \\
-  \multicolumn{1}{p{4.5cm}}{Datos en formato complejo (real e imaginario), sin multilook y en la geometria del radar} & \multicolumn{1}{p{4.5cm}}{Datos en potencia, con multilook y proyectada al suelo} & \multicolumn{1}{p{4.5cm}}{Datos en potencia, con multilook y geocodificada sobe el elipsoide} & \multicolumn{1}{p{4.5cm}}{Datos en potencia, con multilook y geocodificada sobe el el terreno (DEM)}
+  \multicolumn{1}{p{4.5cm}}{Datos en formato complejo (real e imaginario), sin multilook y en la geometria del radar} & \multicolumn{1}{p{4.5cm}}{Datos en potencia, con multilook y proyectada al suelo} & \multicolumn{1}{p{4.5cm}}{Datos en potencia, con multilook y geocodificada sobe el elipsoide} & \multicolumn{1}{p{4.5cm}}{Datos en potencia, con multilook y geocodificada sobe el el terreno (DEM)}\\
+    \multicolumn{1}{p{4.5cm}}{\includegraphics[width=4.3cm]{fig:l1a.png}} & \multicolumn{1}{p{4.5cm}}{\includegraphics[width=4.3cm]{fig:l1b.png}} & \multicolumn{1}{p{4.5cm}}{\includegraphics[width=4.3cm]{fig:l1c.png}} & \multicolumn{1}{p{4.5cm}}{\includegraphics[width=4.3cm]{fig:l1d.png}}\\
+    \bottomrule
   \end{tabular}%
   }
   \caption{Niveles de procesamiento típicos para una imagen SAR.}
   \label{my-label}
   \end{table}
 \end{frame}
+
+\begin{frame}{\secname : \subsecname}
+Muchas gracias.
+\end{frame}
+%--- Next Frame ---%
